# aspira-pay

./: .gitignore  README.md  run.sh  run_bench.sh  run_stress.sh
backend-go/: go.mod  go.sum
deploy/: Dockerfile.api  Dockerfile.engine  Dockerfile.web  docker-compose.yml  prometheus.yml
docs/: aspira_pay_architecture_design.md  aspira_pay_blockchain_layer_optimization.md  aspira_pay_card_payment_subsystem_design.md  aspira_pay_cross_border_payment_clearing_architecture.md  aspira_pay_trading_engine_optimization.md  aspira_pay_v4_account_transfer_payment_architecture.md  aspira_pay_v5_payment_system_architecture.md  aspirapay_crossborder_payment_full_architecture_v2.md  development-issues.md
engine-cpp/: CMakeLists.txt
engine-cpp/config/: engine.json
engine-cpp/include/engine/: CommandQueue.h  Engine.h  EngineMetrics.h  EventRingBuffer.h  FeeEngine.h  Ledger.h  ObjectPool.h  Publisher.h  Types.h  WAL.h
engine-cpp/proto/: engine.proto
engine-cpp/src/: CommandQueue.cpp  Engine.cpp  FeeEngine.cpp  Ledger.cpp  Publisher.cpp  WAL.cpp  main.cpp
engine-cpp/tests/: test_engine.cpp
migrations/: 001_init_users.sql  002_init_accounts.sql  003_init_kyc.sql  004_init_payments.sql  005_init_ledger.sql  006_init_settlement.sql  007_init_chain.sql  008_init_idempotency.sql  009_init_outbox.sql  010_init_sessions.sql  011_performance_indexes.sql  012_blockchain_optimization.sql  013_v3_ledger_settlement.sql  014_card_subsystem.sql  015_user_kyc_pin.sql  016_v2_audit_wallet_security.sql  017_v3_merchant_webhook.sql  018_v4_transfer_payment_link.sql  (+1 more)
web-admin/: index.html  (+2 more)
(+103 files in other folders)
